Ability to toggle themed icons for all apps
Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>
Change-Id: I196b2390e27f8986c4946c9186624ceb64160b1e

[YAAP] Move to icon category. Also correct default state as off.

--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -77,6 +77,13 @@
         android:key="icon_category"
         android:title="@string/category_icon">
 
+        <SwitchPreference
+            android:key="pref_allapps_themed_icons"
+            android:title="@string/pref_themed_icons_title"
+            android:summary="@string/pref_themed_icons_summary"
+            android:defaultValue="false"
+            android:persistent="true" />
+
         <!--
         LAUNCHER_ADD_NEW_APPS_TO_HOME_SCREEN_ENABLED(613)
         LAUNCHER_ADD_NEW_APPS_TO_HOME_SCREEN_DISABLED(614)
