--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -157,6 +157,7 @@
     <icon drawable="@drawable/camera" package="com.oneplus.camera" name="Camera" />
     <icon drawable="@drawable/camera" package="com.oplus.camera" name="Camera" />
     <icon drawable="@drawable/camera" package="com.oppo.camera" name="Camera" />
+    <icon drawable="@drawable/camera" package="com.particlesdevs.photoncamera" name="Camera" />
     <icon drawable="@drawable/camera" package="com.sec.android.app.camera" name="Camera" />
     <icon drawable="@drawable/camera" package="com.transsion.camera" name="Camera" />
     <icon drawable="@drawable/camera" package="net.sourceforge.opencamera" name="Open Camera" />
