--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -72,4 +72,7 @@
     <string name="pref_themed_icons_title">All apps themed icons</string>
     <string name="pref_themed_icons_summary">Toggle to switch between homescreen dock and all apps themed icons</string>
 
+    <!-- Show top shadow -->
+    <string name="show_top_shadow">Show top shadow</string>
+
 </resources>
